add install script

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -59,4 +59,4 @@ set -g @plugin 'spywhere/tmux-named-snapshot'
 set -g @resurrect-processes 'nnn'
 set -g @resurrect-dir '~/.config/tmux/resurrect/'
 # Run tmp
-run '~/.config/tmux/plugins/tpm/tpm
+run '~/.config/tmux/plugins/tpm/tpm'
